pushing lab06 working code

--- a/sales.html
+++ b/sales.html
@@ -23,9 +23,11 @@
   </header>
 
   <main>
-    <section id="seattleSales">
-      
-    </section>
+    <section id="seattleSales"> </section>
+    <section id="tokyoSales"> </section>
+    <section id="dubaiSales"> </section>
+    <section id="parisSales"> </section>
+    <section id="limaSales"> </section>
   </main>
 
   <footer>
