updating project code

--- a/sales.html
+++ b/sales.html
@@ -5,30 +5,41 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sales | Cookie Stand</title>
-  <!-- <link rel="stylesheet" href="assets/css/reset.css"> -->
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,400;0,500;0,600;1,100&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Cabin:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet">
+
+  <link rel="stylesheet" href="assets/css/reset.css">
   <link rel="stylesheet" href="assets/css/style.css">
 
 </head>
 <body>
   <header>
-    <h1>Starter Template</h1>
+    <img src="./assets/img/salmon.png" alt="salmon">
+
     <nav>
       <ul>
-        <li><a href="./index.html">Link 1</a></li>
-        <li>Link 2</li>
-        <li>Link 3</li>
-        <li>Link 4</li>
+        <li><a href="./index.html">Swim on Home</a></li>
+        <!-- <li>Link 2</li> -->
       </ul>
     </nav>
   </header>
 
-  <main>
+  <main id="salesData">
+
+    <table id="dataTable"></table>
+
     <section id="seattleSales"> </section>
     <section id="tokyoSales"> </section>
     <section id="dubaiSales"> </section>
     <section id="parisSales"> </section>
     <section id="limaSales"> </section>
+
   </main>
+
+
 
   <footer>
     <p>&copy |<a href="">Link to Somewhere</a></p>
