added more styles and content form client-facing page

--- a/index.html
+++ b/index.html
@@ -16,7 +16,12 @@
 </head>
 <body>
   <header>
-    <img src="./assets/img/salmon.png" alt="salmon">
+    <div class="hero">
+      <img src="./assets/img/hero-img.png" alt="">
+    </div>
+  
+    <!-- <img src="./assets/img/salmon.png" alt="salmon"> -->
+    <!-- <h1>Pat's Salmon Cookies</h1> -->
 
     <nav>
       <ul>
@@ -27,7 +32,36 @@
   </header>
 
   <main>
+    <section class="history">
+      <h2>How We Came to be</h2>
+      <p>
+        Pat came up with a business idea by combining his love for sweets and his passion for healthy ecosystems. He has developed a recipe for a coffee-time confection called Salmon Cookies. These cookies made into the shape of a salmon and are suitable for both humans and salmon to enjoy.
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia illo sed voluptates odit ad quo, eius totam id nostrum harum ullam unde consequuntur hic accusamus, vero, repellendus nihil tempora reiciendis.
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque dolor odio, voluptatum ex est numquam ea eligendi ullam debitis amet blanditiis aperiam reprehenderit, dolorum animi tempora saepe, nam aspernatur sunt?
+      </p>
+    </section>
+    <section style="">
+      <h2>Our Store Locations</h2>
+      <h5>All our stores are open 06:00am - 08:00pm, 7 Days a Week!</h5>
+      <article>
+        <h6>Store Location 1</h6>
+      </article>
+      <article>
+        <h6>Store Location 2</h6>
+      </article>
+      <article>
+        <h6>Store Location 3</h6>
+      </article>
+      <article>
+        <h6>Store Location 4</h6>
+      </article>
+      <article>
+        <h6>Store Location 5</h6>
+      </article>
 
+    </section>
   </main>
 
   <footer>
