--- a/sales.html
+++ b/sales.html
@@ -17,7 +17,12 @@
 </head>
 <body>
   <header>
-    <img src="./assets/img/salmon.png" alt="salmon">
+    <div class="hero">
+      <img src="./assets/img/hero-img.png" alt="">
+    </div>
+  
+    <!-- <img src="./assets/img/salmon.png" alt="salmon"> -->
+    <!-- <h1>Pat's Salmon Cookies</h1> -->
 
     <nav>
       <ul>
@@ -26,17 +31,8 @@
       </ul>
     </nav>
   </header>
-
   <main id="salesData">
-
     <table id="dataTable"></table>
-
-    <section id="seattleSales"> </section>
-    <section id="tokyoSales"> </section>
-    <section id="dubaiSales"> </section>
-    <section id="parisSales"> </section>
-    <section id="limaSales"> </section>
-
   </main>
 
 
