updating site assets

--- a/index.html
+++ b/index.html
@@ -26,12 +26,11 @@
     <nav>
       <ul>
         <li><a href="./sales.html">Cookie Stand Sales</a></li>
-        <!-- <li>Link 2</li> -->
       </ul>
     </nav>
   </header>
 
-  <main>
+  <main class="container">
     <section class="history">
       <h2>How We Came to be</h2>
       <p>
@@ -42,24 +41,74 @@
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque dolor odio, voluptatum ex est numquam ea eligendi ullam debitis amet blanditiis aperiam reprehenderit, dolorum animi tempora saepe, nam aspernatur sunt?
       </p>
     </section>
-    <section style="">
-      <h2>Our Store Locations</h2>
-      <h5>All our stores are open 06:00am - 08:00pm, 7 Days a Week!</h5>
-      <article>
+    <section class="storeInfo">
+      <h4 class="text-center">Our Store Locations</h4>
+      <p class="text-center">All our stores are open 06:00am - 08:00pm, 7 Days a Week!</p>
+
+    <section class="stores flex flex-row justify-around">
+      <div class="storeCard">
+        <img src="https://place-hold.it/200x125/ddd/000.png&text=locationImage" alt="">
         <h6>Store Location 1</h6>
-      </article>
-      <article>
-        <h6>Store Location 2</h6>
-      </article>
-      <article>
-        <h6>Store Location 3</h6>
-      </article>
-      <article>
-        <h6>Store Location 4</h6>
-      </article>
-      <article>
-        <h6>Store Location 5</h6>
-      </article>
+        <address>
+          <span>123 Shop Location</span>
+          <span>City, ST 12345</span>
+          <a href="tel:+1234567890">(123) 456-7890</a>
+          <a href="mailto:email@cookieStand.com">email@cookieStand.com</a>
+        </address>
+      </div>
+      <div class="storeCard">
+        <img src="https://place-hold.it/200x125/ddd/000.png&text=locationImage" alt="">
+        <h6>Store Location 1</h6>
+        <address>
+          <span>123 Shop Location</span>
+          <span>City, ST 12345</span>
+          <a href="tel:+1234567890">(123) 456-7890</a>
+          <a href="mailto:email@cookieStand.com">email@cookieStand.com</a>
+        </address>
+      </div>
+      <div class="storeCard">
+        <img src="https://place-hold.it/200x125/ddd/000.png&text=locationImage" alt="">
+        <h6>Store Location 1</h6>
+        <address>
+          <span>123 Shop Location</span>
+          <span>City, ST 12345</span>
+          <a href="tel:+1234567890">(123) 456-7890</a>
+          <a href="mailto:email@cookieStand.com">email@cookieStand.com</a>
+        </address>
+      </div>
+      <div class="storeCard">
+        <img src="https://place-hold.it/200x125/ddd/000.png&text=locationImage" alt="">
+        <h6>Store Location 1</h6>
+        <address>
+          <span>123 Shop Location</span>
+          <span>City, ST 12345</span>
+          <a href="tel:+1234567890">(123) 456-7890</a>
+          <a href="mailto:email@cookieStand.com">email@cookieStand.com</a>
+        </address>
+      </div>
+      <div class="storeCard">
+        <img src="https://place-hold.it/200x125/ddd/000.png&text=locationImage" alt="">
+        <h6>Store Location 1</h6>
+        <address>
+          <span>123 Shop Location</span>
+          <span>City, ST 12345</span>
+          <a href="tel:+1234567890">(123) 456-7890</a>
+          <a href="mailto:email@cookieStand.com">email@cookieStand.com</a>
+        </address>
+      </div>
+
+    </section>
+      
+
+    </section>
+    <section class="indexGallery">
+      <div class="sectionHeader">
+        <h4 class="text-center">Feature Gallery</h4>
+        <p class="text-center">Collection of Images from our stores</p>
+      </div>
+      <div class="galleryImages">
+
+      </div>
 
     </section>
   </main>
