adding additional index images

--- a/index.html
+++ b/index.html
@@ -107,7 +107,12 @@
         <p class="text-center">Collection of Images from our stores</p>
       </div>
       <div class="galleryImages">
-
+        <img src="./assets/img/family.jpg" alt="">
+        <img src="./assets/img/shirt.jpg" alt="">
+        <img src="./assets/img/chinook.jpg" alt="">
+        <img src="./assets/img/cutter.jpeg" alt="">
+        <img src="./assets/img/fish.jpg" alt="">
+        <img src="./assets/img/frosted-cookie.jpg" alt="">
       </div>
 
     </section>
