--- a/sales.html
+++ b/sales.html
@@ -25,32 +25,30 @@
     <nav>
       <ul>
         <li><a href="./index.html">Swim on Home</a></li>
-        <!-- <li>Link 2</li> -->
       </ul>
     </nav>
   </header>
   <main id="salesData">
     <form style="width: 100%;" id="addCookieStand">
-      <fieldset style="width: 100%; padding: 5px 20px;">
+      <fieldset style="width: 100%; padding: 10px 20px; display: flex; justify-content: space-between; align-items: center; flex-wrap: wrap;">
         <legend>Add New Cookie Stand</legend>
-        <div>
+        <div class="flex flex-column">
           <label for="standLocation">Location</label>
           <input type="text" name="stand" id="standLocation" placeholder="New Stand Location">
         </div>
-        <div>
+        <div class="flex flex-column">
           <label for="minCust">Minimum Customers</label>
           <input type="number" name="min" id="minCust" placeholder="# Min Customers">
         </div>
-        <div>
+        <div class="flex flex-column">
           <label for="maxCust">Maximum Customers</label>
           <input type="number" name="max" id="maxCust" placeholder="# Max Customers">
         </div>
-        <div>
+        <div class="flex flex-column">
           <label for="avgCookiesSold">Average Cookies Sold/Hr</label>
           <input type="number" name="avg" id="avgCookiesSold" placeholder="Average Cookies per Customer">
         </div>
-          <button>Do Stuff
-          </button>
+          <button id="addCookieStand">Add Store Location</button>
       </fieldset>
     </form>
     <table id="dataTable">
