refactoring for srr

--- a/sales.html
+++ b/sales.html
@@ -31,7 +31,7 @@
   <main id="salesData">
     <form style="width: 100%;" id="addCookieStand">
       <fieldset style="width: 100%; padding: 10px 20px; display: flex; justify-content: space-between; align-items: center; flex-wrap: wrap;">
-        <legend>Add New Cookie Stand</legend>
+        <legend style="font-size: 1.2rem;">Add New Cookie Stand</legend>
         <div class="flex flex-column">
           <label for="standLocation">Location</label>
           <input type="text" name="stand" id="standLocation" placeholder="New Stand Location">
